--- a/src/main/resources/org/example/secondary.fxml
+++ b/src/main/resources/org/example/secondary.fxml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 
-<?import javafx.scene.shape.Rectangle?>
-
-<?import javafx.scene.layout.AnchorPane?>
-<VBox onKeyPressed="#handleOnKeyPressed" onKeyReleased="#handleOnKeyReleased" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.example.SecondaryController">
-    <Label alignment="CENTER" fx:id="label1" text="Secondary View"/>
-    <Button fx:id="menuButton" text="Exit to menu" onAction="#switchToPrimary"/>
-    <AnchorPane>
-        <Rectangle fx:id="rectangle" x="10" y="20" width="100" height="50" fill="burlywood" stroke="black"/>
-    </AnchorPane>
-    <padding>
-        <Insets top="10" bottom="10" left="10" right="10"/>
-    </padding>
-</VBox>
+<AnchorPane fx:id="pane" onKeyPressed="#handleOnKeyPressed"
+            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.SecondaryController">
+    <Label fx:id="label1" text="Secondary View" />
+    <Button fx:id="menuButton" AnchorPane.leftAnchor="200.0" onAction="#switchToMenu" text="Exit to menu" />
+    <Rectangle fx:id="border" fill="#ffffff00" height="480.0" stroke="black" strokeType="INSIDE" width="640.0" visible="false"
+               AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" y="30"/>
+    <Rectangle fx:id="rectangle" fill="burlywood" height="10" stroke="black" width="10" x="20" y="40" />
+</AnchorPane>
