Started making arkanoid -Add arkanoid package -Wrap rectangles in platform and border -Add onChange event

--- a/src/main/resources/org/example/arkanoid.fxml
+++ b/src/main/resources/org/example/arkanoid.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
 
+<?import org.example.arkanoid.Platform?>
+<?import org.example.BorderGame?>
 <AnchorPane fx:id="pane" onKeyPressed="#handleOnKeyPressed"
             xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.SecondaryController">
-    <Label fx:id="label1" text="Secondary View" />
-    <Button fx:id="menuButton" AnchorPane.leftAnchor="200.0" onAction="#switchToMenu" text="Exit to menu" />
-    <Rectangle fx:id="border" fill="#ffffff00" height="480.0" stroke="black" strokeType="INSIDE" width="640.0" visible="false"
+    <Button fx:id="menuButton" AnchorPane.rightAnchor="0.0" onAction="#switchToMenu" text="Exit to menu"/>
+    <Label fx:id="label1"/>
+    <BorderGame fx:id="border" fill="#ffffff00" height="480.0" stroke="black" strokeType="INSIDE" width="640.0" visible="false"
                AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" y="30"/>
-    <Rectangle fx:id="rectangle" fill="burlywood" height="10" stroke="black" width="50"/>
+    <Platform fx:id="platform" fill="burlywood" height="10" stroke="black" width="50"/>
 </AnchorPane>
