--- a/src/main/resources/org/example/menu.fxml
+++ b/src/main/resources/org/example/menu.fxml
@@ -8,7 +8,7 @@
 <VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.MenuController">
    <children>
       <Label text="Menu" />
-      <Button fx:id="primaryButton" text="Switch to Secondary View" onAction="#switchToSecondary"/>
+      <Button fx:id="arkanoidButton" onAction="#switchToSecondary"/>
       <Button fx:id="exitButton" text="Exit" onAction="#exit"/>
    </children>
    <padding>
