--- a/src/main/resources/org/example/arkanoid.fxml
+++ b/src/main/resources/org/example/arkanoid.fxml
@@ -6,6 +6,7 @@
 <?import org.example.arkanoid.view.PlatformView?>
 <?import org.example.BorderGameView?>
 <?import org.example.arkanoid.view.BallView?>
+<?import javafx.scene.text.Font?>
 <AnchorPane fx:id="pane" onKeyPressed="#handleOnKeyPressed"
             xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.ArkanoidController">
     <Button fx:id="menuButton" AnchorPane.rightAnchor="0.0" onAction="#switchToMenu" text="Exit to menu" focusTraversable="false"/>
@@ -14,4 +15,9 @@
                     AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" y="30"/>
     <PlatformView fx:id="platformView" fill="burlywood" stroke="black" focusTraversable="true"/>
     <BallView fx:id="ballView" fill="bisque"/>
+    <Label fx:id="labelLost" visible="false" text="YOU LOST" textFill="aliceblue">
+        <font>
+            <Font name="Arial Black" size="24.0" />
+        </font>
+    </Label>
 </AnchorPane>
